# user-service

./: .env.example  README.md  SETUP.md  docker-compose.dev.yml  pyproject.toml
docs/: README.md
migration/: env.py
migration/versions/: a33fd1da29ca_user_preference.py
src/: dependencies.py  main.py
src/config/: cache.py  database.py  deps.py  rate_limiter.py  security.py  settings.py
src/grpc/: __init__.py
src/grpc_service/: grpc_server.py
src/messaging/: producer.py
src/migration/: env.py
src/models/: __init__.py  users.py
src/repositories/: auth_repo.py  preference_repo.py
src/routes/: auth.py
src/routes/v1/: auth.py  user_preference_settings.py
src/schemas/: auth.py  response.py  user_preference.py
src/services/: auth_service.py  email_service.py  preference_service.py  s3_service.py
src/tests/: conftest.py
src/utils/: exceptions.py  logging.py
