[project]
name = "user-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Emmanuel Oyewole", email = "oyewoleemmanuel300@gmail.com"},
]
dependencies = ["grpcio>=1.75.0", "fastapi[standard]>=0.116.2", "SQLAlchemy>=2.0.43", "passlib>=1.7.4", "PyJWT>=2.10.1", "pyotp>=2.9.0", "python-multipart>=0.0.20", "pydantic-settings>=2.10.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "httpx>=0.28.1",
    "factory-boy>=3.3.3",
]

[tool.pdm.scripts]
dev = "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"

[tool.pytest.ini_options]
testpaths = ["/test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]