[project]
name = "user-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Emmanuel Oyewole", email = "oyewoleemmanuel300@gmail.com"}
]
dependencies = [
    "grpcio>=1.75.0", 
    "fastapi[standard]>=0.116.2", 
    "SQLAlchemy>=2.0.43", 
    "passlib>=1.7.4", 
    "PyJWT>=2.10.1", 
    "pyotp>=2.9.0", 
    "python-multipart>=0.0.20", 
    "pydantic-settings>=2.10.1", 
    "pika>=1.3.2", 
    "aio-pika>=9.5.7", 
    "redis>=6.4.0", 
    "asyncpg>=0.30.0", 
    "boto3>=1.34.34", 
    "structlog>=24.1.0",
    "jinja2>=3.1.0",
    "aioboto3>=13.0.0",
    "python-json-logger>=4.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=1.2.0",
    "httpx>=0.28.1",
    "factory-boy>=3.3.3",
    "pre-commit>=4.3.0",
    "alembic>=1.16.5",
    "grpcio-tools>=1.75.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"
grpc = "python src/grpc/grpc_service/grpc_server.py"

